[gd_scene load_steps=45 format=1]

[ext_resource path="res://Data/Buildings/Tank.gd" type="Script" id=1]
[ext_resource path="res://Data/Player/Melee.tres" type="Animation" id=2]
[ext_resource path="res://Data/Player/Shoot.tres" type="Animation" id=3]
[ext_resource path="res://Data/Player/body.gd" type="Script" id=4]
[ext_resource path="res://Data/Buildings/Tank.png" type="Texture" id=5]
[ext_resource path="res://Data/Buildings/Tank_gun.gd" type="Script" id=6]
[ext_resource path="res://Data/Weapons/Gun Parts/Barrel/basic_barrel.png" type="Texture" id=7]
[ext_resource path="res://Data/Weapons/Gun Parts/Melee/bayanette.png" type="Texture" id=8]
[ext_resource path="res://Data/Weapons/Gun Parts/Clip/small clip.png" type="Texture" id=9]
[ext_resource path="res://Data/Weapons/Gun Parts/Special_attatchments/grenade_launcher.png" type="Texture" id=10]
[ext_resource path="res://Data/Buildings/Tank Turret.png" type="Texture" id=11]
[ext_resource path="res://Data/Weapons/Gun Parts/lazer sight.png" type="Texture" id=12]
[ext_resource path="res://Data/Weapons/basic_gun_shoot.tres" type="Animation" id=13]
[ext_resource path="res://Data/Buildings/mounted_gun.gd" type="Script" id=14]
[ext_resource path="res://Data/Buildings/nest_pig.gd" type="Script" id=15]
[ext_resource path="res://Data/Buildings/mounted_pig.png" type="Texture" id=16]
[ext_resource path="res://Data/Player/Engineer_movement.gd" type="Script" id=17]
[ext_resource path="res://Data/Player/Idle_R.png" type="Texture" id=18]
[ext_resource path="res://Data/Player/Run_R2.png" type="Texture" id=19]
[ext_resource path="res://Data/Player/Run_R1.png" type="Texture" id=20]
[ext_resource path="res://Data/Player/Updated peter/idle_crouch.png" type="Texture" id=21]
[ext_resource path="res://Data/Player/Walk_Crouch_R2.png" type="Texture" id=22]
[ext_resource path="res://Data/Player/Crawl_Prone_R1.png" type="Texture" id=23]
[ext_resource path="res://Data/Player/Crawl_Prone_R2.png" type="Texture" id=24]
[ext_resource path="res://Data/Player/Updated peter/crouch_walk_2.png" type="Texture" id=25]
[ext_resource path="res://Data/Player/Idle_Prone_R.png" type="Texture" id=26]
[ext_resource path="res://Data/Player/Head.png" type="Texture" id=27]
[ext_resource path="res://Data/Health bar/health_meter.png" type="Texture" id=28]
[ext_resource path="res://Data/Player/newArm.png" type="Texture" id=29]
[ext_resource path="res://Data/Weapons/Gun Parts/Base/rifle_frame.png" type="Texture" id=30]
[ext_resource path="res://Data/Player/Ally_Movement.gd" type="Script" id=31]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 5 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( -29, 22, -39, 15, -39, -31, 5, -31, 10, -26, 10, -14 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 29, 22, -29, 22, 10, -14, 25, -14, 39, 0, 39, 14 )

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 319.148

[sub_resource type="CapsuleShape2D" id=6]

custom_solver_bias = 0.0
radius = 30.0
height = 168.0

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 6, 4 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 6, 12 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 16, 5 )

[sub_resource type="CircleShape2D" id=10]

custom_solver_bias = 0.0
radius = 9.0

[sub_resource type="SpriteFrames" id=11]

animations = [ {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "crouch_idle_r",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "prone_crawl",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 21 ) ],
"loop": true,
"name": "crouch_walk_r",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "prone_idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=12]

animations = [ {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=13]

custom_solver_bias = 0.0
radius = 24.0
height = 258.0

[node name="Allies" type="Node2D"]

[node name="Tank" type="KinematicBody2D" parent="." groups=[
"vehicle",
]]

editor/display_folded = true
z/z = -2
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -5 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="Tank"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Attack" type="Timer" parent="Tank"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="death" type="Timer" parent="Tank"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="hit_timer" type="Timer" parent="Tank"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tank"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Melee = ExtResource( 2 )
anims/Shoot = ExtResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tank"]

transform/pos = Vector2( 0, -5 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="body" type="KinematicBody2D" parent="Tank"]

transform/pos = Vector2( 0, -20 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -1.6, -1 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -1.6, -1 )
shapes/1/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 4 )

[node name="legs" type="AnimatedSprite" parent="Tank/body"]

transform/pos = Vector2( -1.6, -18 )
frames = SubResource( 4 )
animation = "run"

[node name="RayCast2D" type="RayCast2D" parent="Tank/body"]

transform/pos = Vector2( -1.6, -18 )
enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="Area2D" type="Area2D" parent="Tank/body"]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 0
collision/mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tank/body/Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tank/body"]

transform/pos = Vector2( -1.6, -1 )
build_mode = 0
polygon = Vector2Array( -39, 15, -29, 22, 29, 22, 39, 14, 39, 0, 25, -14, 10, -14, 10, -26, 5, -31, -39, -31 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="Tank_gun" type="KinematicBody2D" parent="Tank/body" groups=[
"guns and parts",
"weapons",
]]

editor/display_folded = true
transform/pos = Vector2( 6, -22 )
input/pickable = false
collision/layers = 0
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 6 )

[node name="body" type="Node2D" parent="Tank/body/Tank_gun"]

[node name="barrel" type="Sprite" parent="Tank/body/Tank_gun/body"]

visibility/visible = false
transform/pos = Vector2( 19, 1 )
z/z = -1
texture = ExtResource( 7 )
centered = false

[node name="mod" type="Sprite" parent="Tank/body/Tank_gun/body"]

visibility/visible = false
transform/pos = Vector2( 8, 1 )
z/z = -1
centered = false

[node name="melee" type="Sprite" parent="Tank/body/Tank_gun/body"]

visibility/visible = false
transform/pos = Vector2( 14, 4 )
texture = ExtResource( 8 )
centered = false

[node name="clip" type="Sprite" parent="Tank/body/Tank_gun/body"]

visibility/visible = false
transform/pos = Vector2( 9, 5 )
texture = ExtResource( 9 )
centered = false

[node name="special" type="Sprite" parent="Tank/body/Tank_gun/body"]

visibility/visible = false
transform/pos = Vector2( 11, 2 )
transform/rot = 180.0
texture = ExtResource( 10 )
centered = false

[node name="Sprite" type="Sprite" parent="Tank/body/Tank_gun/body"]

texture = ExtResource( 11 )
centered = false
offset = Vector2( 0, -4 )

[node name="RayCast2D" type="RayCast2D" parent="Tank/body/Tank_gun/body"]

editor/display_folded = true
transform/pos = Vector2( 19, 1 )
enabled = true
cast_to = Vector2( 1, 0 )
layer_mask = 1
type_mask = 15

[node name="lazer_sight" type="Sprite" parent="Tank/body/Tank_gun/body/RayCast2D"]

visibility/opacity = 0.2
texture = ExtResource( 12 )
centered = false

[node name="barrel_tip" type="Position2D" parent="Tank/body/Tank_gun/body"]

transform/pos = Vector2( 38, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tank/body/Tank_gun"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Shoot = ExtResource( 13 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Area2D" type="Area2D" parent="Tank/body/Tank_gun"]

input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 153, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 0
collision/mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tank/body/Tank_gun/Area2D"]

transform/pos = Vector2( 153, 0 )
transform/rot = 90.0
shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[node name="machinegun_turret" type="StaticBody2D" parent="Tank/body" groups=[
"deployables",
]]

transform/pos = Vector2( -19, -14 )
input/pickable = false
collision/layers = 0
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 14 )

[node name="Pig" type="KinematicBody2D" parent="Tank/body/machinegun_turret" groups=[
"guns and parts",
"weapons",
]]

editor/display_folded = true
transform/pos = Vector2( 20, -20 )
input/pickable = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 15 )

[node name="body" type="Node2D" parent="Tank/body/machinegun_turret/Pig"]

editor/display_folded = true
transform/pos = Vector2( 0, 1 )

[node name="barrel" type="Sprite" parent="Tank/body/machinegun_turret/Pig/body"]

visibility/visible = false
transform/pos = Vector2( 19, 1 )
z/z = -1
texture = ExtResource( 7 )
centered = false

[node name="mod" type="Sprite" parent="Tank/body/machinegun_turret/Pig/body"]

visibility/visible = false
transform/pos = Vector2( 8, 1 )
z/z = -1
centered = false

[node name="melee" type="Sprite" parent="Tank/body/machinegun_turret/Pig/body"]

visibility/visible = false
transform/pos = Vector2( 14, 4 )
texture = ExtResource( 8 )
centered = false

[node name="clip" type="Sprite" parent="Tank/body/machinegun_turret/Pig/body"]

visibility/visible = false
transform/pos = Vector2( 9, 5 )
texture = ExtResource( 9 )
centered = false

[node name="special" type="Sprite" parent="Tank/body/machinegun_turret/Pig/body"]

visibility/visible = false
transform/pos = Vector2( 11, 2 )
transform/rot = 180.0
texture = ExtResource( 10 )
centered = false

[node name="RayCast2D" type="RayCast2D" parent="Tank/body/machinegun_turret/Pig/body"]

editor/display_folded = true
transform/pos = Vector2( 20, 1 )
enabled = true
cast_to = Vector2( 1, 0 )
layer_mask = 1
type_mask = 15

[node name="lazer_sight" type="Sprite" parent="Tank/body/machinegun_turret/Pig/body/RayCast2D"]

visibility/opacity = 0.2
texture = ExtResource( 12 )
centered = false

[node name="barrel_tip" type="Position2D" parent="Tank/body/machinegun_turret/Pig/body"]

transform/pos = Vector2( 19, -3 )

[node name="Sprite" type="Sprite" parent="Tank/body/machinegun_turret/Pig/body"]

texture = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tank/body/machinegun_turret/Pig"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Shoot = ExtResource( 13 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Area2D" type="Area2D" parent="Tank/body/machinegun_turret/Pig"]

transform/pos = Vector2( 0, 1 )
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 134, -3 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tank/body/machinegun_turret/Pig/Area2D"]

transform/pos = Vector2( 134, -3 )
transform/rot = 90.0
shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[node name="Timer" type="Timer" parent="Tank/body/machinegun_turret"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Attack" type="Timer" parent="Tank/body/machinegun_turret"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = true

[node name="turret_pos" type="Position2D" parent="Tank/body/machinegun_turret"]

transform/pos = Vector2( 20, -20 )

[node name="operator_pos" type="Position2D" parent="Tank/body/machinegun_turret"]

transform/pos = Vector2( 1, -5 )

[node name="driver_pos" type="Position2D" parent="Tank/body"]

transform/pos = Vector2( 11, 14 )

[node name="turret_pos" type="Position2D" parent="Tank/body"]

transform/pos = Vector2( 5, -23 )

[node name="gunner_pos" type="Position2D" parent="Tank/body"]

transform/pos = Vector2( -20, -12 )

[node name="Engineer" type="KinematicBody2D" parent="." groups=[
"infantry",
]]

editor/display_folded = true
z/z = -1
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -5 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Engineer"]

transform/pos = Vector2( 0, -5 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="jump_over" type="RayCast2D" parent="Engineer"]

transform/pos = Vector2( 3.0716e-06, -1 )
transform/rot = 90.0
enabled = true
cast_to = Vector2( 0, 10 )
layer_mask = 1
type_mask = 1

[node name="jump_l" type="RayCast2D" parent="Engineer"]

transform/pos = Vector2( -6, -1 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 1
type_mask = 1

[node name="jump_r" type="RayCast2D" parent="Engineer"]

transform/pos = Vector2( 5, -1 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 1
type_mask = 1

[node name="Timer" type="Timer" parent="Engineer"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="death" type="Timer" parent="Engineer"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="hit_timer" type="Timer" parent="Engineer"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Engineer"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Melee = ExtResource( 2 )
anims/Shoot = ExtResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="body" type="KinematicBody2D" parent="Engineer"]

editor/display_folded = true
transform/pos = Vector2( 0, -17 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 4 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 9 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 5 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 10 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, -13 )
shapes/2/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 4 )

[node name="legs" type="AnimatedSprite" parent="Engineer/body"]

editor/display_folded = true
transform/pos = Vector2( 0, 5 )
frames = SubResource( 11 )
animation = "idle"

[node name="secondaryEquip" type="Sprite" parent="Engineer/body/legs"]

transform/pos = Vector2( -5, -20 )
transform/rot = -90.0

[node name="head" type="AnimatedSprite" parent="Engineer/body"]

transform/pos = Vector2( 0, -13 )
frames = SubResource( 12 )
animation = "default"

[node name="Area2D" type="Area2D" parent="Engineer/body/head"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 13 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 161, -1 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 0
collision/mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Engineer/body/head/Area2D"]

transform/pos = Vector2( 161, -1 )
transform/rot = 90.0
shape = SubResource( 13 )
trigger = true
_update_shape_index = 0

[node name="health_meter" type="Sprite" parent="Engineer/body/head"]

transform/pos = Vector2( -8, -3 )
transform/scale = Vector2( 1, -1 )
texture = ExtResource( 28 )
centered = false

[node name="health" type="Sprite" parent="Engineer/body/head/health_meter"]

transform/pos = Vector2( 2, 1 )
transform/scale = Vector2( 1, 3 )
texture = ExtResource( 12 )
centered = false

[node name="arm_r" type="Sprite" parent="Engineer/body"]

editor/display_folded = true
transform/pos = Vector2( -5, -3 )
texture = ExtResource( 29 )
centered = false
offset = Vector2( 0, -3 )

[node name="Gun" type="Sprite" parent="Engineer/body/arm_r"]

visibility/visible = false
transform/pos = Vector2( 5, -4 )
texture = ExtResource( 30 )
centered = false

[node name="standing" type="CollisionShape2D" parent="Engineer/body"]

transform/pos = Vector2( 0, 4 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="prone" type="CollisionShape2D" parent="Engineer/body"]

transform/pos = Vector2( 0, 5 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 1

[node name="headcollision" type="CollisionShape2D" parent="Engineer/body"]

transform/pos = Vector2( 0, -13 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 2

[node name="RayCast2D" type="RayCast2D" parent="Engineer/body"]

enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="Area2D" type="Area2D" parent="Engineer/body"]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 0
collision/mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Engineer/body/Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Infantry" type="KinematicBody2D" parent="." groups=[
"infantry",
]]

editor/display_folded = true
z/z = -1
z/relative = false
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -5 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 31 )

[node name="Timer" type="Timer" parent="Infantry"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Attack" type="Timer" parent="Infantry"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="death" type="Timer" parent="Infantry"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="hit_timer" type="Timer" parent="Infantry"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Infantry"]

transform/pos = Vector2( 0, -5 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="jump_over" type="RayCast2D" parent="Infantry"]

transform/pos = Vector2( 3.0716e-06, -1 )
transform/rot = 90.0
enabled = true
cast_to = Vector2( 0, 10 )
layer_mask = 1
type_mask = 1

[node name="jump_l" type="RayCast2D" parent="Infantry"]

transform/pos = Vector2( -6, -1 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 1
type_mask = 1

[node name="jump_r" type="RayCast2D" parent="Infantry"]

transform/pos = Vector2( 5, -1 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 1
type_mask = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Infantry"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Melee = ExtResource( 2 )
anims/Shoot = ExtResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="body" type="KinematicBody2D" parent="Infantry"]

transform/pos = Vector2( 0, -17 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 4 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 9 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 5 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 10 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, -13 )
shapes/2/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 4 )

[node name="legs" type="AnimatedSprite" parent="Infantry/body"]

editor/display_folded = true
transform/pos = Vector2( 0, 5 )
frames = SubResource( 11 )
animation = "idle"

[node name="secondaryEquip" type="Sprite" parent="Infantry/body/legs"]

transform/pos = Vector2( -5, -20 )
transform/rot = -90.0

[node name="head" type="AnimatedSprite" parent="Infantry/body"]

transform/pos = Vector2( 0, -13 )
frames = SubResource( 12 )
animation = "default"

[node name="Area2D" type="Area2D" parent="Infantry/body/head"]

input/pickable = false
shapes/0/shape = SubResource( 13 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 161, -1 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 0
collision/mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Infantry/body/head/Area2D"]

transform/pos = Vector2( 161, -1 )
transform/rot = 90.0
shape = SubResource( 13 )
trigger = true
_update_shape_index = 0

[node name="health_meter" type="Sprite" parent="Infantry/body/head"]

transform/pos = Vector2( -8, -3 )
transform/scale = Vector2( 1, -1 )
texture = ExtResource( 28 )
centered = false

[node name="health" type="Sprite" parent="Infantry/body/head/health_meter"]

transform/pos = Vector2( 2, 1 )
transform/scale = Vector2( 1, 3 )
texture = ExtResource( 12 )
centered = false

[node name="arm_r" type="Sprite" parent="Infantry/body"]

transform/pos = Vector2( -5, -3 )
texture = ExtResource( 29 )
centered = false
offset = Vector2( 0, -3 )

[node name="Gun" type="Sprite" parent="Infantry/body/arm_r"]

visibility/visible = false
transform/pos = Vector2( 5, -4 )
texture = ExtResource( 30 )
centered = false

[node name="standing" type="CollisionShape2D" parent="Infantry/body"]

transform/pos = Vector2( 0, 4 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="prone" type="CollisionShape2D" parent="Infantry/body"]

transform/pos = Vector2( 0, 5 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 1

[node name="headcollision" type="CollisionShape2D" parent="Infantry/body"]

transform/pos = Vector2( 0, -13 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 2

[node name="RayCast2D" type="RayCast2D" parent="Infantry/body"]

enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="Area2D" type="Area2D" parent="Infantry/body"]

editor/display_folded = true
visibility/visible = false
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 0
collision/mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Infantry/body/Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0


